評価課題完了

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=83,40
-Size=550,324
+Pos=22,49
+Size=628,303
+Collapsed=0
+
+[Window][Window]
+Pos=856,150
+Size=225,170
 Collapsed=0
 
