--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=83,40
+Pos=387,427
 Size=550,324
+Collapsed=0
+
+[Window][Window]
+Pos=60,60
+Size=297,54
 Collapsed=0
 
