--- a/imgui.ini
+++ b/imgui.ini
@@ -4,12 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=733,116
+Pos=777,-5
 Size=550,324
 Collapsed=0
 
 [Window][Window]
 Pos=60,60
-Size=297,54
+Size=288,62
 Collapsed=0
 
